make api backwards compatible
